# LankabelTV

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.vpn.yml  docker-compose.yml  pyproject.toml  requirements.txt
data/: aniworld.db
src/lankabeltv/: ASCII.txt  __main__.py  config.py  entry.py  execute.py  models.py  parser.py  search.py
src/lankabeltv/action/: __init__.py  common.py  download.py  watch.py
src/lankabeltv/common/: __init__.py  common.py
src/lankabeltv/extractors/provider/: strmup.py  vidking.py
src/lankabeltv/web/: __init__.py  app.py  database.py  download_manager.py
src/lankabeltv/web/static/css/: style.css
src/lankabeltv/web/static/js/: api.js  app.js  download.js  queue.js  search.js  trackers.js  ui.js
src/lankabeltv/web/templates/: index.html  login.html  settings.html  setup.html
